fix: fix responsivity on mobile devices

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -24,12 +24,15 @@ a {
 .portrait {
   background-image: url("/profile-a.jpg");
   background-size: contain;
+  background-repeat: no-repeat;
   width: 23rem;
   height: 16rem;
   border-radius: 8rem;
   cursor: pointer;
-
-  &:hover {
-    background-image: url("/profile-b.jpg");
+  @media (min-width:1025px) {
+    &:hover {
+      background-image: url("/profile-b.jpg");
+    }
   }
+
 }
